-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: core-svc
-
b02
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246606 | 13.0.4 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8246779 | 11.0.9-oracle | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8243375 | 11.0.8 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
There is an unchecked return value of calloc in InvocationAdapter. This should be adjusted.
- backported by
-
JDK-8243375 check calloc rv in libinstrument InvocationAdapter
-
- Resolved
-
-
JDK-8246606 check calloc rv in libinstrument InvocationAdapter
-
- Resolved
-
-
JDK-8246779 check calloc rv in libinstrument InvocationAdapter
-
- Resolved
-