8234968: check calloc rv in libinstrument InvocationAdapter

Reviewed-by: clanger, stuefe, sspitsyn